--- a/ui/instagramresult.kv
+++ b/ui/instagramresult.kv
@@ -33,6 +33,7 @@
                 font_size: "20sp"
                 size_hint: 1, 1
                 ripple_behavior: True
+                on_release:root.detect()
                 background_color: 0, 0, 0, 0  # Make the button's background transparent
                 canvas.before:
                     Color:
