--- a/ui/instagram.kv
+++ b/ui/instagram.kv
@@ -27,6 +27,7 @@
         MDTextField:
             id: text_input
             hint_text: "Write Instagram Profile Link"
+            theme_text_color:"Custom"
             hint_text_color: 1, 1, 1, 1
             size_hint: 0.8, None
             height: self.minimum_height
